--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: tourrGui
 Type: Package
 Title: A Tour GUI using gWidgets
-Version: 0.1
-Date: 2010-04-19
+Version: 0.2
+Date: 2011-02-01
 Author: Bei <beihuang@iastate.edu>, Dianne Cook <dicook@iastate.edu>,
-        and Hadley Wickham <h.wickham@gmail.com>
-Maintainer: Bei Huang <beihuang@iastate.edu>
+        Hadley Wickham <h.wickham@gmail.com>
+Maintainer: Dianne Cook <dicook@iastate.edu>
 Description: The GUI allows user to control the tour by checkboxes for
         the variable selection, slider for the speed, and toggle boxes
         for pause.
@@ -18,6 +18,6 @@ Collate: 'gui_andrews.r' 'gui_density.r' 'gui_faces.r' 'gui_image.r'
         'gui_tour.r' 'gui_xy.r' 'tour_andrews.r' 'tour_density.r'
         'tour_faces.r' 'tour_pcp.r' 'tour_scatmat.r' 'tour_stars.r'
         'tour_stereo.r' 'tour_xy.r'
-Packaged: 2010-04-19 02:40:13 UTC; Administrator
+Packaged: 2011-01-31 23:28:37 UTC; dicook
 Repository: CRAN
-Date/Publication: 2010-04-19 07:30:58
+Date/Publication: 2011-02-02 08:46:41
